// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as another element 1`] = `
<p
  class="wp-components-view css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</div>
`;

exports[`props should render with custom styles (Array) 1`] = `
<p
  class="wp-components-view css-1k7hfdr"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render with custom styles (object) 1`] = `
<p
  class="wp-components-view css-9ricam"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;

exports[`props should render with custom styles (string) 1`] = `
<p
  class="wp-components-view css-170o10"
  data-g2-c16t="true"
  data-g2-component="View"
>
  <span>
    Some people are worth melting for.
  </span>
</p>
`;
